test/libsolidity/semanticTests/errors/named_error_args.sol
error E(uint a, uint b);
contract C {
    function f() public pure {
        revert E({b: 7, a: 2});
    }
    function encode_f() public pure returns (bytes memory) {
        return abi.encodeError(E, ({b: 7, a: 2}));
    }
}
// ----
// f() -> FAILURE, hex"85208890", hex"0000000000000000000000000000000000000000000000000000000000000002", hex"0000000000000000000000000000000000000000000000000000000000000007"
// encode_f() -> 0x20, 0x44, hex"85208890", hex"0000000000000000000000000000000000000000000000000000000000000002", hex"0000000000000000000000000000000000000000000000000000000000000007"
